traces/bug_691.txt
examples++-load/medit.cpp:1027: error: DEAD_STORE
  The value written to &mps (type Fem2D::MeshPoint*) is never used.
Showing all 1 steps of the trace


examples++-load/medit.cpp:1027:46: Write of unused value
1025.   {
1026.     if(NoGraphicWindow) return Nothing;
1027.     MeshPoint *mp(MeshPointStack(stack)) , mps=*mp;
                                                     ^
1028.     long order (arg(0,stack,1));
1029.     //
